Fixed text contrast in dark mode and fixed aria label for description text box not to include the words 'Not required' as this could confuse screenreaders

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -267,7 +267,7 @@
 
 @utility invalid {
   &.form-field label {
-    @apply text-red-700 dark:text-red-500;
+    @apply text-red-700 dark:text-red-400;
   }
 
   &.form-field input[type="text"] {
